# trading-system-discovery

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: indicators.yaml  markets.yaml  strategy.yaml
data/constituents/: nasdaq_100.csv  obx.csv  omxc25.csv  omxh25.csv  omxs30.csv  sp500.csv
docs/: backlog.md  claude_code_extraction_prompt.md  final_project_specification.md
docs/tasks/: 001-market-data-pipeline.md  002-data-validation.md  003-indicator-library.md  004-strategy-genome.md  005-backtest-evaluator.md  006-ga-engine.md  007-bayesian-optimizer.md  008-staged-pipeline.md  009-walkforward-validation.md  010-statistical-significance.md  011-result-persistence.md  012-performance-reporting.md  013-pipeline-runner.md  TASK_TEMPLATE.md
scripts/: check_data_quality.py  download_all_data.py  download_constituents.py
tests/integration/: test_download_pipeline.py  test_quality_pipeline.py
tests/unit/: test_bayesian.py  test_config.py  test_constituents.py  test_downloader.py  test_evaluator.py  test_execution.py  test_exits.py  test_fitness.py  test_ga.py  test_genome.py  test_indicators.py  test_loader.py  test_main.py  test_metrics.py  test_persistence.py  test_pipeline.py  test_quality.py  test_reports.py  test_robustness.py  test_signals.py  test_walkforward.py
tsd/: __init__.py  config.py  main.py
tsd/analysis/: __init__.py  cross_market.py  reports.py  robustness.py
tsd/data/: __init__.py  constituents.py  downloader.py  loader.py  quality.py
tsd/export/: __init__.py  (+2 more)
(+24 files in other folders)
