[project]
name = "trading-system-discovery"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.isort]
known-first-party = ["tsd"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "deap.*",
    "optuna.*",
    "vectorbt.*",
    "ta.*",
    "yfinance.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit-level tests (fast, no I/O)",
    "integration: integration-level tests (may use data files)",
]
